# lks32mc03x_pac

./: Cargo.toml  device.x  gen.bat
.cargo/: config.toml
src/: lib.rs
svd/: LKS32MC03x.svd  LKS32MC03x_patch.svd
